Fixing the padding on smaller patches like Browser Buttons

--- a/public/css/documentation.css
+++ b/public/css/documentation.css
@@ -117,11 +117,8 @@ div.patch h3 {
 	font-size: 12px;
 	text-align: left;
 	background: rgba(255, 255, 255, 0.1);
-	padding: 0;
+	padding: 5px 8px;
 	margin: 0;
-	padding-left: 8px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 }
